# holographic_market

./: .gitignore  CUDA_SETUP.md  DEPENDENCIES.md  README.md  requirements.txt  run_research.py  setup_fedora.sh
cpp_engine/: CMakeLists.txt
cpp_engine/include/: backtest_stats.hpp  binance_feed.hpp  csv_replay.hpp  cuda_pipeline.cuh  cuda_utils.cuh  cuml_clustering.cuh  execution_engine.hpp  gpu_lob_mirror.cu  gpu_lob_mirror.cuh  hodge_kernel.cuh  lob_core.hpp  lobpcg_solver.cu  lobpcg_solver.cuh  lockfree_ring_buffer.hpp  memory_arena.hpp  signal_router.hpp
cpp_engine/src/: backtest_main.cpp  cuda_pipeline.cu  cuml_clustering.cu  gpu_lob_mirror.cu  hodge_kernel.cu  lobpcg_solver.cu  main.cpp
engine/: CMakeLists.txt
engine/ai/: cuml_clustering.cu  cuml_clustering.cuh
engine/app/: live_node.hpp  main_backtest.cpp  main_live.cpp
engine/common/: lockfree_ring_buffer.hpp  memory_arena.hpp  thread_utils.hpp  types.hpp
engine/compute/: cuda_pipeline.cu  cuda_pipeline.cuh  floer_homology.cu  floer_homology.cuh  gpu_lob_mirror.cu  gpu_lob_mirror.cuh  hodge_kernel.cu  hodge_kernel.cuh  lobpcg_solver.cu  lobpcg_solver.cuh
engine/compute/ai/: cuml_clustering.cu
engine/core/: backtest_stats.hpp  lob_core.hpp  lockfree_ring_buffer.hpp
engine/data_feed/: binance_wss.hpp  csv_replay.hpp  feed_handler.hpp  lob_core.hpp
engine/execution/: binance_fapi.hpp  execution_gateway.hpp
engine/math/: cuda_pipeline.cu  cuda_pipeline.cuh  cuda_utils.cuh  floer_homology.cu  floer_homology.cuh  gpu_lob_mirror.cu  gpu_lob_mirror.cuh  hodge_kernel.cu  hodge_kernel.cuh  lobpcg_solver.cu  lobpcg_solver.cuh
engine/net/: binance_feed.hpp  binance_gateway.hpp  csv_replay.hpp  execution_engine.hpp  oms_core.hpp  signal_router.hpp  user_data_feed.hpp
engine/trading/: alpha_model.hpp  execution_types.hpp  risk_manager.hpp
infra/: build_sharpe_grid.sh  build_sharpe_grid_v2.sh  download_binance_aggtrades.py  download_binance_aggtrades_v2.py  download_binance_data.py  download_historical_range.sh  download_historical_range_v2.sh  inject_phase3.sh  plot_backtest.py  provision.sh  provision_fedora.sh  provision_ubuntu.sh  quant_tearsheet.py  run_wfo.sh
research/: analyze_wfo.py
src/: gauge_theory_alpha.py  spectral_pruning.py  tensor_compression.py
